--- a/NLP_Corpus_reddit.ipynb
+++ b/NLP_Corpus_reddit.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3747f3b5",
+   "id": "39e1ec5f",
    "metadata": {},
    "source": [
     "My NLP project wishes to investigate the language that we use to talk about porn, specifically its ethics and effects, both personally and societally. To find some data, I searched reddit for 'porn affect', 'porn effect', 'porn ethics', 'porn opinion', 'porn influence','porn industry','porn discussion' 'porn thoughts', 'porn sexuality', 'porn positive', 'pro porn', 'anti porn', 'porn feelings', and 'porn society'. From these search results, I selected relevant posts that invited discussion and reflection on pornography from a range of subreddits dedicated to a variety of topics, favouring those with the most comments and only including posts with <100 comments if their question was explicitly relevant. I stored these links as an array.\n",
     "In order to run the necessary code, I imported nltk, string, requests, pandas, seaborn, matplotlib, numpy, praw and datetime libraries and the relevant functions within them.\n",
     "I defined the function 'submission' to retrieve the title, user, score, date and text information from a given url, accessed using my API-registered reddit credentials, and create a data frame from this information. I used a for loop to iterate this process through my links, using time to stay within the reddit API request limit and not overload the server. Then, I concatenated the results into one data frame. I cleaned this data frame up a bit by removing rows for deleted comments that carried no information. \n",
-    "To aid my NLP analysis, I defined a function to tokenize my text data, breaking it up into individual words, then remove punctuation and stop words which are not meaningful and lemmatize the results, converting inflected forms of a word into a single item. I added these lemmas as a column in my data frame. \n",
-    "To avoid the load of calling upon APIs each time I run later analysis, as well as to safeguard my data against the ever-changing landscape of the internet, I saved my data frame locally as a csv, which I can open back up as a data frame using pandas. \n"
+    "To aid my NLP analysis, I defined a function to tokenize my text data, breaking it up into individual words, then remove punctuation and stop words which are not meaningful, and lemmatize and lower-case the results, converting inflected forms of a word into a single item. I added these lemmas as a column in my data frame. \n",
+    "To avoid the load of calling upon APIs each time I run later analysis, as well as to safeguard my data against the ever-changing landscape of the internet, I saved my data frame locally as a csv, which I can open back up as a data frame using pandas. \n",
+    "\n",
+    "This work contains 332 words.\n"
    ]
   },
   {
@@ -1759,22 +1761,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48029af4",
+   "id": "2ac734b4",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "b2f7ccfa",
+   "id": "eeb218c7",
    "metadata": {},
    "source": [
-    "# Scraps of code and notes to self "
+    "# Scraps of code and notes to self (ignore)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "dba98c15",
+   "id": "925cf4a6",
    "metadata": {},
    "source": [
     "## To further clean \n",
@@ -1784,7 +1786,7 @@
     "import gensim\n",
     "import string\n",
     "\n",
-    "#Uses gensim to process the sentences\n",
+    "Uses gensim to process the sentences\n",
     "def sentence_to_words(sentences):\n",
     "    for sentence in sentences:\n",
     "        sentence_tokenized = gensim.utils.simple_preprocess(sentence,\n",
@@ -1796,7 +1798,7 @@
     "       # if len(sentence_tokenized) > 0:\n",
     "        #    yield sentence_tokenized\n",
     "\n",
-    "#Process the sentences manually\n",
+    "Process the sentences manually\n",
     "def sentence_to_words_from_scratch(sentences):\n",
     "    for sentence in sentences:\n",
     "        sentence_tokenized = [token.lower() for token in \n",
@@ -1812,7 +1814,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73b89b5f",
+   "id": "3e4ac50d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1844,7 +1846,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "67e26da0",
+   "id": "e16ea627",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1857,7 +1859,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "1ce3cb7d",
+   "id": "14384f24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1868,7 +1870,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1b9f30e",
+   "id": "f5b91f2d",
    "metadata": {},
    "outputs": [],
    "source": [
