--- a/NLP_Corpus_reddit.ipynb
+++ b/NLP_Corpus_reddit.ipynb
@@ -620,7 +620,7 @@
     "    tokens = word_tokenize(text)\n",
     "    tokens = [token for token in tokens if token not in string.punctuation]\n",
     "    stop_words = set(stopwords.words('english'))\n",
-    "    tokens = [token for token in tokens if token not in stop_words]\n",
+    "    tokens = [token for token in tokens if token.lower() not in stop_words]\n",
     "    lemmas = [lemmatizer.lemmatize(i.lower()) for i in tokens]\n",
     "    return lemmas"
    ]
